# Projet

./: .gitignore  README.md  README_2.md  docker-compose.yml  pyproject.toml  requirements.txt
.ipynb_checkpoints/: Dockerfile-checkpoint
backend/: Dockerfile  database.py  main.py  requirements.txt
backend/app/models/: schemas.py
backend/app/routers/: recommender.py
backend/app/service/: new_reco.py  recommendation_service.py
backend/app/utils/: count_gender.py  data_from_api.py  data_loader.py  database_loading.py
backend/app/utils/data/: jupt.ipynb  movies_database.json
backend/service/: recommendation_service.py
data/: jupt.ipynb
frontend/: Dockerfile  main.py  requirements.txt
frontend/app/utils/: api.py  charts.py
frontend/utils/: api.py  charts.py
monenv/: pyvenv.cfg
monenv/Scripts/: activate  activate.bat
